[gd_scene load_steps=3 format=3 uid="uid://bl2x4yif2wrml"]

[ext_resource type="Script" uid="uid://t8i4e1258pw0" path="res://UI/Dialogs/DeletePaletteDialog.gd" id="2"]
[ext_resource type="StyleBox" uid="uid://1q61x8arunpe" path="res://UI/Themes/focused_button.tres" id="2_ob1pa"]

[node name="DeletePaletteDialog" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12
script = ExtResource("2")

[node name="Container" type="Control" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="Container"]
layout_mode = 0
anchor_right = 1.0
offset_bottom = 21.0
text = "DELETE_PALETTE_DIALOG_TEXT"

[node name="HBoxContainer" type="HBoxContainer" parent="Container"]
layout_mode = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -25.0
size_flags_vertical = 0

[node name="DeleteButton" type="Button" parent="Container/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = ExtResource("2_ob1pa")
text = "DELETE"

[node name="CancelButton" type="Button" parent="Container/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = ExtResource("2_ob1pa")
text = "CANCEL"
